# furuyoni

./: .gitignore  404.html  GEMENI.md  OFFICIAL_TEXT_GATE.md  README.md  Taskfile.yml  audit_docs.py  config.yaml  index.html  lore-index.html  lore.html  main.py  mkdocs.yml  package.json  pyproject.toml  resources-index.html  resources.html  rules.html  sitemap.xml  status.html  tsconfig.json
.serena/: project.yml
archive/: blogs.js  data.js  index.html  main.js  mechanics.js  megami.js  style.css
assets/: furuyoni_style.css
beginner/: index.html
config/: official_sources.yaml
discord-exporter/: DiscordChatExporter.Cli.deps.json
docs/: beginner.md  changelog.md  glossary.md  index.md  lore-index.md  lore.md  mechanics.md  overview.md  resources-index.md  resources.md  rules.md  status.md  strategy.md
history/: season1.html  season10.html  season2.html  season3.html  season4.html  season5.html  season6.html  season7.html  season8.html  season9.html
lore/: index.html
mechanics/: index.html
megami/: 01_yurina.html  02_saine.html  03_himika.html  04_tokoyo.html  05_oboro.html  06_yukihi.html  07_shinra.html  08_hagane.html  09_chikage.html  10_kururu.html  11_sariya.html  12_laila.html  13_utsuro.html  14_honoka.html  15_korunu.html  16_yatsuha.html  17_hatsumi.html  18_mizuki.html  19_megumi.html  20_kanawe.html  21_kamui.html  22_renri.html  23_akina.html  24_shisui.html  cards.html  index.html
resources/: index.html
scripts/: add_card_anchors.py  add_internal_links.py  check_links.py  cleanup_images.ts  convert_cards.py  debug_card_map.py  (+10 more)
(+154 files in other folders)
